# IBuildHW

./: .gitIgnore  .gitattributes  DockerFileWithBuild  Dockerfile  Readme.md  docker-compose.yml  docker-entrypoint-build.ps1  docker-entrypoint.sh  go.mod  main.go
cmd/: root.go
internal/fingerprints/: db.go
internal/model/: component.go  deptree.go
internal/output/: cyclonedx.go  cyclonedx_test.go  deptree.go
internal/scanner/: scanner.go
internal/strategies/: binaryedges.go  buildlogs.go  cmake.go  compilecommands.go  conan.go  conan_graph.go  headers.go  ldd.go  linkermap.go  linkermap_test.go  meson.go  strategies_test.go  vcpkg.go
testdata/sample-cpp-project/: CMakeLists.txt  conanfile.txt  o1.map
testdata/strategies/: compile_commands.json  conanfile.py  conanfile.txt  graph.json
testdata/strategies/src/: internal_utils.h  main.cpp
